Fix navigation margin collapsing. (#33021)

--- a/packages/block-library/src/columns/editor.scss
+++ b/packages/block-library/src/columns/editor.scss
@@ -1,6 +1,8 @@
 // This max-width is used to constrain the main editor column, it should not
 // cascade into columns.
-.wp-block-columns .wp-block {
+// We use :where to provide minimum specificity, so that intentional margins,
+// such as those of navigation menu items, override and win on specificity.
+.wp-block-columns :where(.wp-block) {
 	max-width: none;
 	margin-left: 0;
 	margin-right: 0;
